fix schedule white space

--- a/design-final/css/responsive.css
+++ b/design-final/css/responsive.css
@@ -583,17 +583,31 @@
     padding: 80px 0;
     top: -100px;
   }
+  .schedule-container p {
+    font-size: 50%;
+  }
+  .schedule-container .days {
+    font-size: 80%;
+  }
+  .schedule-container .days li {
+    padding: 0 32px;
+  }
   .schedule-container .rooms {
     padding: 15px 40px;
     font-size: 80%;
     border-radius: 32px;
   }
+  .schedule-container .posts {
+    width: 650px;
+    margin: auto;
+  }
+
   .schedule-container .posts .post {
     padding: 32px 16px;
   }
   .schedule-container .posts .post-body {
-    margin-left: 4.5em;
-    font-size: 80%;
+    margin-left: 6em;
+    font-size: 60%;
   }
   .speakers.past-speakers {
     margin: 48px auto;
